<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:id="@+id/holder_relative_layout"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:background="@drawable/events"
            android:layout_gravity="top"
            android:layout_marginTop="-85dp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"/>

        <com.midsizemango.materialaboutscreen.RoundedImageView
            android:id="@+id/ll"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="23dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/appicon"
            android:orientation="horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll"
            android:text="@string/your_name"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="5dp"
            android:id="@+id/textView2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:textStyle="italic"
            android:text="@string/your_description"
            android:gravity="center"
            android:textSize="14sp"
            android:id="@+id/textView4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:text="@string/your_role"
            android:textStyle="italic"
            android:gravity="center"
            android:textSize="14sp"
            android:id="@+id/textView3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/textView3"
            android:weightSum="1">

            <Button
                android:id="@+id/buttongp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_plus"
                android:textColor="#DC4B3E"
                android:layout_gravity="start"
                android:background="@android:color/transparent"
                android:layout_weight="0.35"
                android:foreground="?android:attr/selectableItemBackground"/>

            <Button
                android:id="@+id/buttong2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github"
                android:textColor="#201F1F"
                android:layout_gravity="start"
                android:background="@android:color/transparent"
                android:layout_weight="0.35"
                android:foreground="?android:attr/selectableItemBackground"/>

            <Button
                android:id="@+id/buttona2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twitter"
                android:textColor="#55ACEE"
                android:layout_weight="0.35"
                android:layout_gravity="right"
                android:background="@android:color/transparent"
                android:foreground="?android:attr/selectableItemBackground"/>

        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>