<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8.0dip">

        <LinearLayout
            android:orientation="horizontal"
            android:padding="1.0dip"
            android:layout_width="fill_parent"
            android:layout_height="65.0dip">

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:paddingBottom="16.0dip"
                android:paddingTop="16.0dip"
                android:textColor="#505050"
                android:layout_gravity="start|center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:layout_marginTop="-5dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp">

            <ImageView
                android:id="@+id/icon_infofg"
                android:layout_width="24.0dip"
                android:layout_height="24.0dip"
                android:src="@drawable/account"/>

            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="8.0dip"
                android:paddingBottom="8.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32.0dip">

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_name" />

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:id="@+id/app_versiondfg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_place_of_living" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/googleplus"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp">

            <ImageView
                android:id="@+id/icon_info78dfg"
                android:layout_width="24.0dip"
                android:layout_height="24.0dip"
                android:src="@drawable/google_plus" />

            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="8.0dip"
                android:paddingBottom="8.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32.0dip">

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_google_plus_circles" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/github"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp">

            <ImageView
                android:id="@+id/icon_info23sdfg"
                android:layout_width="24.0dip"
                android:layout_height="24.0dip"
                android:src="@drawable/github_circle" />

            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="8.0dip"
                android:paddingBottom="8.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32.0dip">

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_on_github" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/twitter"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp">

            <ImageView
                android:id="@+id/icon_info235dfg"
                android:layout_width="24.0dip"
                android:layout_height="24.0dip"
                android:src="@drawable/twitter" />

            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="8.0dip"
                android:paddingBottom="8.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32.0dip">

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_on_twitter" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/apps"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp">

            <ImageView
                android:layout_width="24.0dip"
                android:layout_height="24.0dip"
                android:src="@drawable/google_play" />

            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="8.0dip"
                android:paddingBottom="8.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32.0dip">

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_apps" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>